ASSIGNED - bug 44: Scrollbar not visible http://localhost:10081/cgi-bin/bugzilla/show_bug.cgi?id=44
left column smaller

git-svn-id: svn+ssh://svn.verinice.org/data/subversion/svnroot/TRUNK@870 4c0145ca-515c-4d1a-a6bc-f9bd594c3410

--- a/sernet.gs.server/WebContent/portal.verinice.private/fileadmin/css/basemod.css
+++ b/sernet.gs.server/WebContent/portal.verinice.private/fileadmin/css/basemod.css
@@ -81,7 +81,7 @@
 	}
 	/* linke Spalte */
 	#col1 {
-		width: 18%;
+		width: 15%;
 	}
 	#col1_content {
 		margin-left: 1em;
@@ -99,7 +99,7 @@
 	}
 	/* Mittlere Spalte */
 	#col3 {
-		margin-left: 18%;
+		margin-left: 15%;
 		margin-right: 64%;
 		border-left: 0px dotted #ddd;
 		border-right: 0px dotted #ddd;
